# connected-cars

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  start.fish
client/: Dockerfile  app.py  pyproject.toml  requirements.txt
docker/: app.Dockerfile  python.Dockerfile
scripts/: build.sh  generate-bundles.sh  requirements.sh
server/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
src/lidar_slam/: app.py
