[tool.poetry]
name = "lidar-slam"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
breezyslam = { path = "./dependencies/breezyslam-0.1.tar.gz" }
roboviz = { path = "./dependencies/roboviz-0.1.tar.gz" }
rplidar = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
