[tool.poetry]
name = "lidar-slam"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
breezyslam = { path = "./submodules/BreezySLAM/python/" }
roboviz = { path = "./submodules/PyRoboViz/" }
rplidar = "^0.9.2"
matplotlib = "^3.1.1"
numpy = "^1.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
