[tool.poetry]
name = "lidar-slam-client"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
breezyslam = { path = "./submodules/BreezySLAM/python/" }
rplidar = "^0.9.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
