[tool.poetry]
name = "lidar-slam-server"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
roboviz = { path = "./submodules/PyRoboViz/" }
websockets = "^8.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
